src/test/deca/context/valid/multipleExp.deca
{
    boolean b;
    int c;
    b = !!!!!!!!!!!!!!!!!b;
    c = -(-(-(-(-c))));
    b = true==false;
    c = 10%((4%c)%(c%2));
}