src/test/deca/context/invalid/op_ineq_bool.deca
//ERROR :5:
{
boolean a=true;
boolean b=false;
boolean c=(a>b);
}